--- a/experiment1/experiment1.html
+++ b/experiment1/experiment1.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Machiiii!!!</h1>
-    <a href= "/experiment1/experiment1.html"> Experiment 1</a>
+    <img src = '/Assets/161662490771951557 (2).gif'>
 </body>
 </html>
