--- a/p5 test/p5test.html
+++ b/p5 test/p5test.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src = "/Libraries/p5.js"></script>
+    <script src = "/Libraries/p5.sound.min.js"></script>
 </head>
 <body>
-    <h1>Machiiii!!!</h1>
-    <a href= "/experiment1/experiment1.html"> Experiment 1</a>
-    <a href= "/p5 test/p5test.html"> p5 test </a>
+    <script src = "sketch.js"></script>
 </body>
 </html>
