added second experiment

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <h1>Machiiii!!!</h1>
-    <a href= "/experiment1/experiment1.html"> Experiment 1</a>
+    <a href= "/experiments/experiment1.html"> Experiment 1</a>
+    <a href= "/experiments/experiment2.html"> Experiment 2</a>
     <a href= "/p5 test/p5test.html"> p5 test </a>
 </body>
 </html>
