--- a/experiments/experiment3_proto2.html
+++ b/experiments/experiment3_proto2.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://player.vimeo.com/video/533245431?autoplay=1&loop=1" width="440" height="903" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/533245431?autoplay=1&loop=1" width="640" height="903" style= "max-width:100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     
 </body>
 </html>
