--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href= "/experiments/experiment1.html"> Experiment 1</a>
     <a href= "/experiments/experiment2.html"> Experiment 2</a>
     <a href= "/experiments/experiment3_proto2.html"> Experiment 3_proto2</a>
+    <a href= "/experiments/experiment4_proto2.2.html"> Experiment 4_proto2.2</a>
     <a href= "/p5 test/p5test.html"> p5 test </a>
 </body>
 </html>
