--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href= "/experiments/experiment2.html"> Experiment 2</a>
     <a href= "/experiments/experiment3_proto2.html"> Experiment 3_proto2</a>
     <a href= "/experiments/experiment4_proto2.2.html"> Experiment 4_proto2.2</a>
+    <a href= "/experiments/experiment5_proto2.2.html"> Experiment 5_proto2.2</a>
     <a href= "/p5 test/p5test.html"> p5 test </a>
+
 </body>
 </html>
