--- a/experiments/experiment5_proto2.2.html
+++ b/experiments/experiment5_proto2.2.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src = '/Assets/Jitter.gif'>
+    <img src = '/Assets/Jitter.gif' style= "max-width:100%">
 </body>
 </html>
