--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href= "/experiments/experiment4_proto2.2.html"> Experiment 4_proto2.2</a>
     <a href= "/experiments/experiment5_proto2.2.html"> Experiment 5_proto2.2</a>
     <a href= "/p5 test/p5test.html"> p5 test </a>
-
+    <a href= "/experiments/Final Animation.html
+    "> p5 test </a>
 </body>
 </html>
