--- a/experiments/FinalAnimation.html
+++ b/experiments/FinalAnimation.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://player.vimeo.com/video/548444473" style= "margin: 0;" width="640" height="903" style= "max-width:100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/548444473" style= "max-width:100%; margin-top: 0px; display: block;"  width = "640px" height="903px" frameborder="none" allow="autoplay; fullscreen;" allowfullscreen></iframe>
    
 </body>
 </html>
