--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <a href= "/experiments/experiment5_proto2.2.html"> Experiment 5_proto2.2</a>
     <a href= "/p5 test/p5test.html"> p5 test </a>
     <a href= "/experiments/FinalAnimation.html"> FinalAnimation</a>
-
+    <a href= "/experiments/FinalAnimation1.html"> FinalAnimation1</a>
 </body>
 </html>
